@startuml

title __PIECE's Class Diagram__\n

  namespace piece {
    abstract class piece.Piece {
        - couleur : couleurPiece
        - posX : int
        - posY : int
        - signe : char
        + Piece()
        + changeCoord()
        + getPosX()
        + getPosY()
        {abstract} + peutJouer()
        + toChar()
    }
  }
  

  namespace piece {
    class piece.Roi {
        + Roi()
        + peutJouer()
    }
  }
  

  namespace piece {
    class piece.Tour {
        + Tour()
        + peutJouer()
    }
  }
  

  namespace piece {
    enum couleurPiece {
      BLANC
      NOIR
    }
  }
  

  piece.Roi -up-|> piece.Piece
  piece.Tour -up-|> piece.Piece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
